# cdc

./: README.md  pyproject.toml
src/cdc_tool/: __init__.py  analyzer.py  cli.py  parser.py  reports.py
tests/: conftest.py  test_analyzer.py  test_parser.py  test_vector_synchronizer.py
tests/fixtures/: async_reset.v  vector_sync.v
tests/pyverilog/: __init__.py
tests/pyverilog/vparser/: __init__.py  ast.py  parser.py
