[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdc-tool"
version = "0.1.0"
description = "A command line checker for clock-domain crossing safety"
readme = "README.md"
authors = [{ name = "CDC Tool Maintainers" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pyverilog>=1.3",
    "networkx>=3.0",
]

[project.optional-dependencies]
reports = ["tabulate>=0.9"]

[project.scripts]
cdc-tool = "cdc_tool.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
